--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div> 
         <strong> dhsgfjkfsdds TINS
             <div> 
-                dshgf YES
+                 YES
             </div>
         </strong>
     </div>
